# streamlored

./: .env.example  .gitignore  Dockerfile  KNOWLEDGE_BASE_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: re2_remake_speedrun.md  resident_evil_2_remake.md  resident_evil_2_remake_leon_speedrun.md  resident_evil_remake_stair_skating.md  silent_hill_team_silent.md
docs/general/: remakes_landscape.md
docs/resident_evil_general/: resident_evil_characters.md  resident_evil_overview.md
docs/resident_evil_hd_remaster/: resident_evil_remake_jill_bad_ending_speedrun.md
docs/resident_evil_knowledge_base/resident_evil_1_remake_information/: resident_evil_1_remake_general_information.md
docs/resident_evil_knowledge_base/resident_evil_1_remake_information/resident_evil_1_remake_speedruns/: resident_evil_remake_jill_normal_bad_ending_pc_speedrun.md  resident_evil_remake_jill_normal_bad_ending_speedrun.md
src/streamlored/: __init__.py  config.py  main.py  obs_client.py  persona.py  twitch_api.py  twitch_bot.py
src/streamlored/llm/: __init__.py  ollama_client.py
src/streamlored/plugins/: __init__.py  example_plugin.py  livesplit_plugin.py
src/streamlored/rag/: __init__.py  chunking.py  json_store.py  ollama_embeddings.py
