[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlored"
version = "0.1.0"
description = "Context-aware Twitch AI co-host with RAG support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "twitchio>=2.8.0,<3.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
streamlored = "streamlored.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/streamlored"]

[tool.ruff]
line-length = 100
target-version = "py311"
